--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "lineman-angular-template",
+  "name": "ng-JukeTube",
   "title": "An HTML/JS/CSS app using Angular.JS",
   "version": "0.0.1",
   "private": true,
   "author": {
-    "name": "David Mosher",
-    "company": "DAVEMO Consulting"
+    "name": "Tharshan Muthulingam"
   },
   "dependencies": {
     "grunt-angular-templates": "0.3.8",
@@ -15,7 +14,9 @@
     "grunt": "~0.4.1",
     "grunt-concat-sourcemap": "~0.3.0",
     "lineman": ">=0.11.6",
-    "coffee-script": "~1.6.3"
+    "coffee-script": "~1.6.3",
+    "express": "3.x",
+    "socket.io": "0.9.x"
   },
   "engines": {
     "node": "~>0.10.5",
