added youtube mix functionality
Now when a song is playing the server checks if a youtube mix playlist
is available for the song, a button appears if found. When clicked the
playlist is queued up.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lineman": ">=0.11.6",
     "coffee-script": "~1.6.3",
     "express": "3.x",
-    "socket.io": "0.9.x"
+    "socket.io": "0.9.x",
+    "scrape": "0.2.3"
   },
   "scripts": {
     "postinstall": "lineman build"
