--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jasmine-given": "~2.1.0",
     "grunt": "~0.4.1",
     "grunt-concat-sourcemap": "~0.3.0",
-    "lineman": ">=0.11.6",
+    "lineman": "0.14.5",
     "coffee-script": "~1.6.3",
     "express": "3.x",
     "socket.io": "0.9.x",
@@ -23,7 +23,7 @@
     "postinstall": "lineman build"
   },
   "engines": {
-    "node": "~>0.10.5",
-    "npm": "~>1.2.18"
+    "node": "0.10.11",
+    "npm": "1.2.30"
   }
 }
