--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "coffee-script": "~1.6.3",
     "express": "3.x",
     "socket.io": "0.9.x",
-    "scrape": "0.2.3"
+    "scrape": "0.2.3",
+    "node.io":"0.5.1"
   },
   "scripts": {
     "postinstall": "lineman build"
